@@ -228,18 +228,19 @@ class PANConf
             // End of address extraction
 
             //
+            // Extract application filter
+            //
+            $tmp = DH::findFirstElementOrCreate('application-filter', $this->sharedroot);
+            $this->appStore->load_application_filter_from_domxml($tmp);
+            // End of application filter groups extraction
+
+            //
             // Extract application groups
             //
             $tmp = DH::findFirstElementOrCreate('application-group', $this->sharedroot);
             $this->appStore->load_application_group_from_domxml($tmp);
             // End of address groups extraction
 
-            //
-            // Extract application filter
-            //
-            $tmp = DH::findFirstElementOrCreate('application-filter', $this->sharedroot);
-            $this->appStore->load_application_filter_from_domxml($tmp);
-            // End of application filter groups extraction
         }
 
 		//
