@@ -28,6 +28,7 @@ bugfix:
 - fix for all FastAPI actions directly running against a firewall
 - fix for address-merger.php - allow ancestor merging with same name on upperlevel for FQDN address objects
 - fix address-edit actions=name-addprefix/name-addsuffix/name-removePrefix/name-removeSuffix
+- fix class App - import application-filter before application-group to avoid tmp application tagging
 
 
 
